03-AGIC-Ingress-Paths/kube-manifests/03-Ingress-HTTP-Paths.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginxapp1-ingress-service
spec:
  ingressClassName: azure-application-gateway
  rules:
    - http:
        paths:
          - path: /       # Comment at Step-09
          #- path: /app1  # UnComment at Step-09
            pathType: Prefix
            backend:
              service:
                name: app1-nginx-clusterip-service
                port: 
                  number: 80
